Finally integrated sandbox PlaidLink

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PLAID_CLIENT_ID=664b266e91f1e6001b02333e
-PLAID_SECRET=b5db6794d25493342f46fd264c54b4
+PLAID_SECRET=e6965684dc10f17454c3b4a7eb9fc7
 PLAID_ENV=sandbox
 PLAID_PRODUCTS=auth,transactions
 PLAID_COUNTRY_CODES=US
-NODE_SERVER_URL=http://localhost:3000
+NODE_SERVER_URL=http://localhost:3000/
